--- a/assets/style.css
+++ b/assets/style.css
@@ -3,10 +3,11 @@
     height:100%;
     justify-content: center;
     align-content: center;
-    align-items: center;
+	align-items: center;
+	text-align: center;
     display: flex;
-    font-size:2em; 
-	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+	font-size:2em; 
+	background: linear-gradient(-45deg, #414141, #E73C7E, #000);
 	background-size: 400% 400%;
 	-webkit-animation: Gradient 15s ease infinite;
 	-moz-animation: Gradient 15s ease infinite;
@@ -18,10 +19,15 @@
 h1.big{
     font-weight: 700;
     font-size:2.5em;
-    
+    text-align: center;
+}
+h1.title{
+	font-weight: 700;
+    font-size:1.5em;
 }
 html,body{
-    height:100%;
+	height:100%;
+	scroll-behavior: smooth;
     font-family: 'Roboto Condensed', sans-serif;
 }
 
@@ -70,3 +76,37 @@ nav{
 .social div{
     padding:10px;
 }
+a{
+	color:inherit;
+}
+a:hover{
+	color:inherit
+}
+img{
+	transform: scale(1.5)
+}
+#about{
+	margin:2em;
+	text-align: center;
+}
+
+/* On screens that are 992px wide or less, go from four columns to two columns */
+@media screen and (max-width: 992px) {
+	
+h1.big{
+    font-weight: 700;
+    font-size:1.2em;
+    
+}
+  }
+  
+  /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+	
+h1.big{
+	
+    font-weight: 700;
+    font-size:1.2em;
+    
+}
+  }
