--- a/assets/style.css
+++ b/assets/style.css
@@ -1,25 +1,30 @@
-.start{
-    width:100%;
-    height:100%;
+.start>div{
     justify-content: center;
     align-content: center;
 	align-items: center;
 	text-align: center;
     display: flex;
 	font-size:2em; 
-	background: linear-gradient(-45deg, #414141, #E73C7E, #000);
-	background-size: 400% 400%;
-	-webkit-animation: Gradient 15s ease infinite;
-	-moz-animation: Gradient 15s ease infinite;
-    animation: Gradient 15s ease infinite;   
-    color:#eee;
+	color:#eee;
+
+    width:100%;
+    height:100%;
     flex-direction: column;
-    
+	background-color: rgba(0,0,0,0.4);
+}
+.start{
+	background-image: url("chip-circuit-components-785418.jpg");
+	background-position: center;
+	background-attachment: fixed;
+	background-size: cover;
+    width:100%;
+    height:100%;
 }
 h1.big{
     font-weight: 700;
     font-size:2.5em;
-    text-align: center;
+	text-align: center;
+	margin:5px;
 }
 h1.title{
 	font-weight: 700;
@@ -32,43 +37,16 @@ html,body{
 }
 
 nav{
-    width:100%;
-    position: fixed !important;  /* Make it stick/fixed */
+	width:100%;
+	position: fixed !important;	
 }
-@-webkit-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+.navbar-item > h4{
+	display: none;
 }
-
-@-moz-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
-
-@keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+.navbar-menu,.navbar-start{
+	justify-content: center ;
+	text-align: center;
+	width:100%;
 }
 .social{
     padding:50px;
@@ -83,7 +61,7 @@ a:hover{
 	color:inherit
 }
 img{
-	transform: scale(2);
+	transform: scale(2.5);
 	margin:20px;
 }
 #about{
@@ -103,11 +81,19 @@ h1.big{
   
   /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
-	
-h1.big{
-	
-    font-weight: 700;
-    font-size:1.2em;
-    
-}
+	.navbar-item{
+		display: block;
+	}	
+	h1.big{
+	    font-weight: 700;
+	    font-size:1.2em;
+	}
+  }
+
+  .logo-oo{
+	background-image: url("hw_logo_png.png");
+	background-position: center;
+	background-size: cover;
+	width:170px;
+	height:150px; 
   }
